--- a/templates/post/detail.html.twig
+++ b/templates/post/detail.html.twig
@@ -14,6 +14,9 @@
 {% block main %}
     <div class="container">
         <div class="row">
+            <p>{{ entity.instance.createdAt|date }} {{ entity.instance.author }}</p>
+        </div>
+        <div class="row">
             {{ entity.instance.content|raw}}
         </div>
         <div class="row">
@@ -27,7 +30,7 @@
             <div class="card mb-3">
                 <div class="card-header">
                     <div class="card-title">
-                        {{comment.createdAt|date}} {{comment.author}}
+                        {{comment.createdAt|date}} | <em>{{comment.author}}</em>
                     </div>
                 </div>
                 <div class="card-body">
